<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="psk.com.swipeicongame.view.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/gameContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/btnShopIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_coins" />

                    <psk.com.swipeicongame.customicon.cTextview
                        android:id="@+id/tvTotalCoins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="1000"
                        android:textColor="@color/accent"
                        android:textSize="20dp" />

                </LinearLayout>

                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/iconDailyBonus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/icon_daily_bonus"
                    android:textColor="@color/accent"
                    android:textSize="40sp" />

                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/iconSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/icon_settings"
                    android:textColor="@color/accent"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <psk.com.swipeicongame.customicon.cTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Swipe Icon"
                    android:textSize="40dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <psk.com.swipeicongame.customicon.cIcon
                        android:id="@+id/cIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/icon_left_hand"
                        android:textSize="100sp" />

                    <psk.com.swipeicongame.customicon.cIcon
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/icon_right_hand"
                        android:textSize="100sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <psk.com.swipeicongame.customicon.cButton
                    android:id="@+id/btnPlayGame"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/test"
                    android:text="Play"
                    android:textColor="@android:color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <psk.com.swipeicongame.customicon.cButton
                    android:id="@+id/btnHowToPlay"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/test"
                    android:text="How to play"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/btnShareFb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/icon_facebook"
                    android:textColor="@color/accent"
                    android:textSize="40sp" />

                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/btnShareTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/icon_twitter"
                    android:textColor="@color/accent"
                    android:textSize="40sp" />

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>