<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/activity_detail_level"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="psk.com.swipeicongame.view.DetailLevelNormalActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btnNormalLevel1"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/play_button_back">
                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/level1"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/icon_normal_level1"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <psk.com.swipeicongame.customicon.cTextview

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/level1"
                    android:text="Level 1"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnNormalLevel2"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/play_button_back">

                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/level2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/icon_normal_level2"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <psk.com.swipeicongame.customicon.cTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/level2"
                    android:text="Level 2"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnNormalLevel3"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/play_button_back">

                <psk.com.swipeicongame.customicon.cIcon
                    android:id="@+id/level3"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/icon_normal_level3"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <psk.com.swipeicongame.customicon.cTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/level3"
                    android:text="Level 3"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />

            </RelativeLayout>
            <!--
                        <RelativeLayout
                            android:layout_width="200dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/play_button_back">

                            <psk.com.swipeicongame.customicon.cIcon
                                android:id="@+id/level4"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="15dp"
                                android:gravity="center"
                                android:text="@string/icon_normal_level4"
                                android:textColor="@android:color/white"
                                android:textSize="50sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="20dp"
                                android:layout_toRightOf="@+id/level4"
                                android:text="Level 4"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="200dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/play_button_back">

                            <psk.com.swipeicongame.customicon.cIcon
                                android:id="@+id/level5"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="15dp"
                                android:gravity="center"
                                android:text="@string/icon_normal_level5"
                                android:textColor="@android:color/white"
                                android:textSize="50sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="20dp"
                                android:layout_toRightOf="@+id/level5"
                                android:text="Level 5"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />

                        </RelativeLayout>-->


        </LinearLayout>

    </LinearLayout>
</ScrollView>